@@ -66,6 +66,11 @@ base dc=padl,dc=com
 #  soft:      return immediately on server failure
 #bind_policy hard
 
+# Connection policy:
+#  persist:   DSA connections are kept open (default)
+#  oneshot:   DSA connections destroyed after request
+#nss_connect_policy persist
+
 # Idle timelimit; client will close connections
 # (nss_ldap only) if the server has not been contacted
 # for the number of seconds specified below.
