@@ -305,6 +305,11 @@ will return immediately on server failure. All "hard" reconnect
 policies block with exponential backoff before retrying. At present
 the backoff parameters are configurable at compile time only.
 .TP
+.B nss_connect_policy <persist|oneshot>
+Determines whether nss_ldap persists connections. The default
+is for the connection to the LDAP server to remain open after
+the first request.
+.TP
 .B idle_timelimit <timelimit>
 Specifies the time (in seconds) after which
 .B
